<resources>
    <string name="app_name">HearingTest</string>
    <string name="New_Test">New Test</string>
    <string name="button_no">No</string>
    <string name="yesButton">YES</string>
    <string name="startClick">Start</string>
    <string name="current_user">userKey</string>
    <string name="CurrentFrequency">Frequency</string>
    <string name="currentDecibel">Decibel</string>
    <string name="onSaveClick">SAVE</string>
    <string name="InfoExplain">Please Enter the Name of the Screening Participant</string>
    <string name="beginTest">Begin Test</string>
    <string name="empty" />
    <string name="test_query">Test Query</string>
    <string name="queryTest">Test Query</string>
    <string name="normal_hearing_20_15_db">Normal Hearing: –20 – 15 dB</string>
    <string name="minimal_hearing_loss_16_25_db">Minimal Hearing Loss: 16 – 25 dB</string>
    <string name="mild_hearing_loss_26_40_db">Mild Hearing Loss: 26 – 40 dB</string>
    <string name="moderate_severe_hearing_loss_56_70_db">Moderate/Severe Hearing Loss: 56 – 70 dB</string>
    <string name="moderate_hearing_loss_41_55_db">Moderate Hearing Loss: 41 – 55 dB</string>
    <string name="severe_hearing_loss_71_90_db">Severe Hearing Loss: 71 – 90 dB</string>
    <string name="profound_hearing_loss_90_db">Profound Hearing loss: 90+ dB</string>
    <string name="view_legend">View Legend</string>
    <string name="button_view_results">View Results</string>
    <string name="button_delete_test">Delete Test</string>
    <string name="text_tests">Tests Performed</string>
    <string name="view_test_info" />
    <string name="view_test_info1">Test Information</string>
    <string name="disclaimer">This application performs a screening test that is not intended to replace professional help, and may not be 100% accurate. Individual results may vary due to headphone style and environmental factors such as location, background noise and time of day. If the screening participant has concerns regarding their hearing, please seek professional help. \n\n\nThis test is intended to be administered using headphones in a quiet environment in order to ensure as accurate a test as possible.</string>
    <string name="DisclaimerTitle">Disclaimer</string>
    <string name="UseHeadphones">This test is intended to be administered using headphones in a quiet environment in order to ensure as accurate a test as possible.</string>
    <string name="button_view_old_tests">View Completed Tests</string>
    <string name="beforeStart">Please turn phone volume to maximum to ensure an accurate test. \n\nPress start when you are ready to begin.</string>
    <string name="afterStart">When the tone has finished playing, press \"YES\" if you heard the tone, or \"NO\" if you did not.</string>
    <string name="GraphTitle">Hearing Test Results</string>
    <string name="GraphXAxisTitle">Low          Frequency (kHz)          High</string>
    <string name="GraphYAxisTitle">Volume (dB)</string>
</resources>
