<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GraphLegendActivity">

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:background="#00CC00"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/normal_hearing_20_15_db"
            android:textAppearance="@style/TextAppearance.AppCompat" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow7">

        <View
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:background="#F4E242 " />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="341dp"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:text="@string/minimal_hearing_loss_16_25_db"
            android:textAppearance="@style/TextAppearance.AppCompat" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow8">

        <View
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:background=" #FFA500" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="341dp"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:text="@string/mild_hearing_loss_26_40_db"
            android:textAppearance="@style/TextAppearance.AppCompat" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow4">

        <View
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:background="#FF00FF" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/moderate_severe_hearing_loss_56_70_db"
            android:textAppearance="@style/TextAppearance.AppCompat" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow6">

        <View
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:background=" #FF0000" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/moderate_hearing_loss_41_55_db"
            android:textAppearance="@style/TextAppearance.AppCompat" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow5">

        <View
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:background="#999999" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/severe_hearing_loss_71_90_db"
            android:textAppearance="@style/TextAppearance.AppCompat" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow3">

        <View
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="341dp"
            android:layout_height="120dp"
            android:paddingLeft="10dp"
            android:text="@string/profound_hearing_loss_90_db"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:visibility="visible" />
    </TableRow>
</android.support.constraint.ConstraintLayout>